# birdrecorder

./: .gitignore  .pre-commit-config.yaml  README.md  motion.py  pyproject.toml
.github/workflows/: python-package.yml
birdrecorder/: cli.py  detectors.py  recorder.py
test/: test_circular_buffer.py  test_hysteresis.py
