[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "birdrecorder"
version = "1.1.0"
description = "A small tool to detect motion or birds and record video streams of them"
# readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Bird Recorder" },
]
keywords = [
    "opencv",
    "motion",
    "birds",
    "yolo",
]

requires-python = ">=3.10"
dependencies = [
   "opencv-python>=4.12",
   "ultralytics>=8.3",
]

[dependency-groups]
dev = [
    "ruff>=0.14.0",
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pre-commit",
]

[project.optional-dependencies]
cpu = [
  "torch>=2.7.0",
  "torchvision>=0.22.0",
]
cu118 = [
  "torch>=2.7.0",
  "torchvision>=0.22.0",
]
cu128 = [
  "torch>=2.7.0",
  "torchvision>=0.22.0",
]


[project.urls]
Homepage = "https://github.com/truschival/birdrecorder"
Repository = "https://github.com/truschival/birdrecorder.git"
Issues = "https://github.com/truschival/birdrecorder/issues"

[project.scripts]
birdrecorder = "birdrecorder.cli:main"

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu118" },
    { extra = "cu128" },
  ],
]
required-environments = [
  "sys_platform == 'linux' and platform_machine == 'x86_64'"
]


[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu118", extra = "cu118" },
  { index = "pytorch-cu128", extra = "cu128" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu118", extra = "cu118" },
  { index = "pytorch-cu128", extra = "cu128" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true


[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--cov=birdrecorder",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--strict-markers",
    "--strict-config",
    "--disable-warnings",
]
testpaths = ["test"]

[tool.coverage.run]
source = ["birdrecorder"]
omit = [
    "*/tests/*",
    "*/test_*",
]
[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
